--- a/index.html
+++ b/index.html
@@ -13,13 +13,68 @@
   <div id="app">
     <main>
       <div class="main-container">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic pariatur corporis consequuntur? Facilis, sunt dolorem veritatis repellat voluptas quo fuga voluptatum libero illo. Laboriosam doloremque sequi voluptatem error facere eos!
+        <div class="back">
+          <img src="assets/icons/arrow-left-02.svg" alt="">
+          <span>Voltar</span>
+        </div>
+        <h1>Formulário de matrícula</h1>
+        <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+
+        <form method="post" enctype="multipart/form-data">
+          <fieldset class="child-info">
+            <legend>Informações da criança</legend>
+
+            <div class="input-wrapper">
+              <label for="fullname">Nome Completo</label>
+              <input 
+                id="fullname" 
+                type="text"
+                name="fullname"
+                placeholder="Qual o nome da criança">
+            </div>
+
+            <div class="input-wrapper">
+              <label for="birth">Data de nascimento</label>
+              <input type="date" id="birth" name="birth" lang="pt-BR">
+            </div>
+
+            <div class="select-wrapper">
+              <label for="gender">Sexo</label>
+              <select name="gender" id="gender">
+                <option value="female">Feminino</option>
+                <option value="male">Masculino</option>
+                <option value="na">Prefiro não responder</option>
+              </select>
+            </div>
+
+            <div class="textarea-wrapper">
+              <label for="medical-info">Informações médicas</label>
+              <textarea name="medical-info" id="medical-info" cols="30" rows="10" placeholder="A criança possui alguma condição médica que a escola deve estar ciente? (Se sim, especifique)"></textarea>
+            </div>
+            
+            <div class="droparea-wrapper">
+              <input type="file" id="birth-file" name="birth-file">
+              <img src="assets/icons/cloud-upload.svg" alt="">
+              <p>
+                Clique aqui para <br>
+                selecionar os arquivos
+              </p>
+            </div> 
+
+          </fieldset>
+        </form>
       </div>
     </main>
 
     <aside>
       <div class="aside-container">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium ut quas aliquid maiores neque veniam sed adipisci exercitationem, cumque fugiat voluptatum hic, praesentium ducimus cupiditate recusandae quia rerum ad incidunt?
+        <header>
+          <img src="assets/logo.svg" alt="">
+          <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+          <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+        </header>
+
+        <img src="assets/Illustration.svg" alt="Ilustração de uma professora ao lado de várias crianças">
       </div>
     </aside>
   </div>
