--- a/index.html
+++ b/index.html
@@ -119,6 +119,32 @@
             </div>
 
           </fieldset>
+
+          <fieldset class="gardian">
+            <legend>Informações do responsável</legend>
+
+            <div class="input-wrapper">
+              <label for="gardian"></label>
+              <input id="gardian" name="gardian" type="text">
+              <small>Principal responsável legal e contato de emergência</small>
+            </div>
+
+            <div class="input-wrapper">
+              <label for="phone">Telefone</label>
+              <input type="tel" name="phone" id="phone" placeholder="(10) 9 8734-1323">
+            </div>
+
+            <div class="input-wrapper">
+              <label for="email">Email</label>
+              <input type="email" id="email" required>
+              <div class="error">
+                <img src="assets/icons/alert-circle.svg" alt="icone de alerta vermelho">
+                <span>Insira um e-mail válido</span>
+              </div>
+            </div>
+
+          </fieldset>
+
         </form>
       </div>
     </main>
